<resources>
    <string name="app_name">Chhotay</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homefrag">Home Fragment</string>
    <string name="categoryfrag">Category Fragment</string>
    <string name="cartfrag">Cart Fragment</string>
    <string name="accountfrag">Account Fragment</string>
    <string name="buyfrag">Buy Now Fragment</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="buy_now">Buy Now</string>
    <string name="search_hint">Search for Products here...</string>
    <string name="perfume">Perfume</string>
    <string name="men">Men Fashion</string>
    <string name="women">Women Fashion</string>
    <string name="homelifestyle">Home and Lifestyle</string>
    <string name="health">Health and Beauty</string>
    <string name="sports">Sports and Outdoor</string>
    <string name="checkout">Checkout</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="address">Address</string>
    <string name="b_address">Billing Address</string>
    <string name="c_number">Contact Number</string>
    <string name="item_details">Item Details</string>
    <string name="shipping">Shipping Fee</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="quantity">Quantity</string>
    <string name="proceedtopay">Proceed to Pay</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="subtotal">Subtotal</string>
    <string name="total_amoount">Total Amount</string>
    <string name="cod_text">You can pay in Cash to our Courier when you receive the goods at your Doorstep</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_number">Order Number</string>
    <string name="order_dates">Your Order Dates</string>
    <string name="tracking_number">Tracking Number</string>
    <string name="note">NOTE</string>
    <string name="message">To check the status of your Order, go to Order Tab of Chhotay</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mob_num">Mobile Number</string>
    <string name="signin">Sign In</string>
    <string name="or">OR</string>
    <string name="login_with">Log in with</string>
    <string name="google">Google</string>
    <string name="fb">Facebook</string>
    <string name="already">Already have an Account?</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="order">Order</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="send">Send</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype new Password</string>



</resources>
