<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
   >


    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/categoryActivity"
        android:icon="@drawable/ic_category"
        android:title="@string/category" />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_add_to_cart"
        android:title="@string/cart" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_person"
        android:title="@string/account" />

    <item android:id="@+id/paymentmethodselection" android:visible="false" android:title="" />

<!--    <item android:id="@+id/search"-->
<!--        android:title="@string/search_hint"-->
<!--        android:icon="@drawable/ic_search"-->
<!--        app:showAsAction="collapseActionView|ifRoom"-->
<!--        app:actionViewClass="android.widget.SearchView" />-->

</menu>